Successfully integrated Product with buyer_order_item;

--- a/Source/OurFood/src/main/resources/templates/layout.html
+++ b/Source/OurFood/src/main/resources/templates/layout.html
@@ -189,7 +189,11 @@
 						<li sec:authorize="hasRole('PERM_PLATFORM_UPDATE')"><a
 							href="/produce/list" title="Produces"> <i
 								class="menu-icon fa fa-caret-right"></i> Produces
-						</a> <b class="arrow"></b></li>						
+						</a> <b class="arrow"></b></li>
+						<li sec:authorize="hasRole('PERM_PLATFORM_UPDATE')"><a
+								href="/product/list" title="Products"> <i
+								class="menu-icon fa fa-caret-right"></i> Products
+						</a> <b class="arrow"></b></li>
 					</ul></li>
 				<li sec:authorize="hasRole('PERM_PLATFORM_UPDATE')"><a href="#"
 					class="dropdown-toggle"> <i class="menu-icon fa fa-users fa-fw"></i>
