Fixed Product domain

--- a/Source/OurFood/src/main/resources/templates/user/edit-form.html
+++ b/Source/OurFood/src/main/resources/templates/user/edit-form.html
@@ -63,7 +63,7 @@
 										placeholder="E-mail" class="form-control mandatory" id="email"
 										required="required"
 										data-parsley-remote="/users/validatePrimaryEmail"
-										th:attr="data-parsley-remote-message=#{user.notunique.primaiyEmail}" />
+										th:attr="data-parsley-remote-message=#{user.notunique.primaryEmail}" />
 								</div>
 								<label for="email" class="control-label col-md-2">Registered
 									Mobile </label>
