Fixed create User.

--- a/Source/OurFood/src/main/resources/templates/procen/list.html
+++ b/Source/OurFood/src/main/resources/templates/procen/list.html
@@ -72,7 +72,7 @@
 						<h4 class="modal-title" id="modalLabel">Delete Seller
 							Accounts</h4>
 					</div>
-					<form id="form-delete-items" action="@{/procen/delete}"
+					<form id="form-delete-items" th:action="@{/procen/delete}"
 						method="post">
 						<div class="modal-body">
 							<input type="hidden" name="itemIds[]" value="" /> Do you want to
