Properties of BuyerAccount updated

--- a/Source/OurFood/src/main/resources/templates/buyeraccount/list.html
+++ b/Source/OurFood/src/main/resources/templates/buyeraccount/list.html
@@ -33,6 +33,8 @@
 							<th>Name</th>
 							<th>PIN Code</th>
 							<th>Description</th>
+							<th>Phone No.</th>
+							<th>ISBN</th>
 						</tr>
 					</thead>
 					<tbody>
@@ -47,6 +49,8 @@
 									th:text="${account.name}" th:title="${account.name}">Name</a></td>
 								<td><span th:text="${account.pinCode}">PIN</span></td>
 								<td><span th:text="${account.description}">Description</span></td>
+								<td><span th:text="${account.phoneNumber}">Phone Number</span></td>
+								<td><span th:text="${account.ISBN}">ISBN</span></td>
 							</tr>
 						</th:block>
 					</tbody>
