--- a/Source/OurFood/src/main/resources/templates/buyeraccount/edit-form.html
+++ b/Source/OurFood/src/main/resources/templates/buyeraccount/edit-form.html
@@ -51,6 +51,20 @@
 								</div>
 							</div>
 							<div class="form-group">
+								<label for="first-name" class="control-label col-md-2">Phone Number</label>
+								<div class="col-md-4">
+									<input type="text" th:field="*{phoneNumber}" placeholder="Phone Number"
+										class="form-control input-sm mandatory" id="phoneNumber"
+										required="required" />
+								</div>
+								<label for="first-name" class="control-label col-md-2">ISBN Code</label>
+								<div class="col-md-4">
+									<input type="number" th:field="*{ISBN}"
+										placeholder="Pin Code" class="form-control input-sm mandatory"
+										id="ISBN" required="required" />
+								</div>
+							</div>
+							<div class="form-group">
 								<label class="control-label col-md-2"></label>
 								<div class="col-md-4">
 									<input type="submit" id="btn-update"
