--- a/Source/OurFood/src/main/resources/templates/buyeraccount/form.html
+++ b/Source/OurFood/src/main/resources/templates/buyeraccount/form.html
@@ -52,6 +52,20 @@
 								</div>
 							</div>
 							<div class="form-group">
+								<label for="first-name" class="control-label col-md-2">Phone Number</label>
+								<div class="col-md-4">
+									<input type="text" th:field="*{phoneNumber}" placeholder="Phone Number"
+										class="form-control input-sm mandatory" id="phoneNumber"
+										required="required" />
+								</div>
+								<label for="first-name" class="control-label col-md-2">ISBN No.</label>
+								<div class="col-md-4">
+									<input type="number" th:field="*{ISBN}"
+										placeholder="ISBN No." class="form-control input-sm mandatory"
+										id="ISBN" required="required" />
+								</div>
+							</div>
+							<div class="form-group">
 							<label class="control-label col-md-2"></label>
 								<div class="col-md-4">
 									<input type="submit" class="btn btn-sm btn-success"
