Fixed seller account edit

--- a/Source/OurFood/src/main/resources/templates/user/login.html
+++ b/Source/OurFood/src/main/resources/templates/user/login.html
@@ -10,6 +10,18 @@
 	content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
 
 <!-- bootstrap & fontawesome -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css"/>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css"/>
+<link static:href="@{/css/ace-fonts.css}" rel="stylesheet" />
+
+<link rel="stylesheet" static:href="@{/js/toastr/toastr.min.css}" />
+<link rel="stylesheet" static:href="@{/css/bootstrap.css}" />
+<link rel="stylesheet" static:href="@{/css/font-awesome.css}" />
+<link rel="stylesheet" static:href="@{/css/ace.css}" />
+<link rel="stylesheet" static:href="@{/css/static.css}" />
+<link rel="stylesheet" static:href="@{/css/scanon-ext.css}" />
+<link rel="stylesheet"
+	static:href="@{/css/tinymce/skins/lightgray/skin.min.css}" />
 <link static:href="@{/css/bootstrap.css}" rel="stylesheet" />
 <link static:href="@{/css/font-awesome.css}" rel="stylesheet" />
 
