--- a/Source/OurFood/src/main/resources/templates/layout-applite.html
+++ b/Source/OurFood/src/main/resources/templates/layout-applite.html
@@ -10,6 +10,7 @@
 <meta name="viewport"
 	content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
 <title>Applites</title>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css"/>
 <link rel="stylesheet" static:href="@{/js/toastr/toastr.min.css}" />
 <link rel="stylesheet" static:href="@{/css/bootstrap.css}" />
 <link rel="stylesheet" static:href="@{/css/font-awesome.css}" />
