--- a/Source/OurFood/src/main/resources/templates/product/form.html
+++ b/Source/OurFood/src/main/resources/templates/product/form.html
@@ -53,6 +53,12 @@
                                               placeholder="Description" class="form-control mandatory"
                                               id="description" required="required" ></textarea>
                             </div>
+                            <label for="img" class="control-label col-md-2">Image Url</label>
+                            <div class="col-md-4">
+									<textarea th:field="*{img}"
+                                              placeholder="Image Url" class="form-control mandatory"
+                                              id="img" required="required" ></textarea>
+                            </div>
                         </div>
                         <div class="form-group">
                             <label class="control-label col-md-2"></label>
