--- a/Source/OurFood/src/main/resources/templates/product/edit-form.html
+++ b/Source/OurFood/src/main/resources/templates/product/edit-form.html
@@ -55,7 +55,7 @@
                             </div>
                             <label for="img" class="control-label col-md-2">Image Url</label>
                             <div class="col-md-4">
-									<textarea th:field="*{img}"
+									<textarea th:field="*{pic}"
                                               placeholder="Image Url" class="form-control mandatory"
                                               id="img" required="required" ></textarea>
                             </div>
