--- a/Source/OurFood/src/main/resources/templates/selleraccount/form.html
+++ b/Source/OurFood/src/main/resources/templates/selleraccount/form.html
@@ -52,6 +52,14 @@
 								</div>
 							</div>
 							<div class="form-group">
+								<label for="first-name" class="control-label col-md-2">Phone Number</label>
+								<div class="col-md-4">
+									<input type="text" th:field="*{phoneNumber}" placeholder="Phone Number"
+										class="form-control input-sm mandatory" id="phoneNumber"
+										required="required" />
+								</div>
+							</div>
+							<div class="form-group">
 							<label class="control-label col-md-2"></label>
 								<div class="col-md-4">
 									<input type="submit" class="btn btn-sm btn-success"
