--- a/Source/OurFood/src/main/resources/templates/selleraccount/list.html
+++ b/Source/OurFood/src/main/resources/templates/selleraccount/list.html
@@ -34,6 +34,7 @@
 							<th>Name</th>
 							<th>PIN Code</th>
 							<th>Description</th>
+							<th>Phone No.</th>
 						</tr>
 					</thead>
 					<tbody>
@@ -48,6 +49,7 @@
 									th:text="${account.name}" th:title="${account.name}">Name</a></td>
 								<td><span th:text="${account.pinCode}">PIN</span></td>
 								<td><span th:text="${account.description}">Description</span></td>
+								<td><span th:text="${account.phoneNumber}">Phone Number</span></td>
 							</tr>
 						</th:block>
 					</tbody>
