--- a/Source/OurFood/src/main/resources/templates/product/shop.html
+++ b/Source/OurFood/src/main/resources/templates/product/shop.html
@@ -10,8 +10,15 @@
     <div class="page-header header-background">
         <h1>Shop Products</h1>
     </div>
-    <div class="form-group">
-        <input type="text" id="search" class="form-control" placeholder="Search"/>
+    <div class="navbar-fixed top">
+        <div class="container">
+            <form th:method="get" th:action="@{/product/shop}" class="navbar-form" role="search">
+                <div class="form-group">
+                    <input type="text" name="query" id="query" class="form-control" placeholder="Search"/>
+                </div>
+                <button type="submit" class="btn btn-default">Submit</button>
+            </form>
+        </div>
     </div>
     <div class="row">
         <th:block th:each="product : ${products}">
