--- a/Source/OurFood/src/main/resources/templates/selleraccount/edit-form.html
+++ b/Source/OurFood/src/main/resources/templates/selleraccount/edit-form.html
@@ -29,13 +29,13 @@
 					<div class="row">
 						<fieldset>
 							<div class="form-group">
-								<label for="first-name" class="control-label col-md-2">Name</label>
+								<label for="name" class="control-label col-md-2">Name</label>
 								<div class="col-md-4">
 									<input type="text" th:field="*{name}" placeholder="Name"
 										class="form-control input-sm mandatory" id="name" required="required"
 										pattern="/^[\w'\s]+$/" />
 								</div>
-								<label for="first-name" class="control-label col-md-2">Pin
+								<label for="pinCode" class="control-label col-md-2">Pin
 									Code</label>
 								<div class="col-md-4">
 									<input type="number" th:field="*{pinCode}"
@@ -52,10 +52,19 @@
 								</div>
 							</div>
 							<div class="form-group">
-								<label for="first-name" class="control-label col-md-2">Phone Number</label>
+								<label for="phoneNumber" class="control-label col-md-2">Phone Number</label>
 								<div class="col-md-4">
 									<input type="text" th:field="*{phoneNumber}" placeholder="Phone Number"
 										class="form-control input-sm mandatory" id="phoneNumber"
+										required="required" />
+								</div>
+								
+							</div>
+							<div class="form-group">
+								<label for="location" class="control-label col-md-2">Location</label>
+								<div class="col-md-4">
+									<input type="text" th:field="*{location}" placeholder="Location"
+										class="form-control input-sm mandatory" id="location"
 										required="required" />
 								</div>
 								
