--- a/Source/OurFood/src/main/resources/templates/selleraccount/form.html
+++ b/Source/OurFood/src/main/resources/templates/selleraccount/form.html
@@ -3,7 +3,41 @@
 	xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
 	layout:decorator="layout">
 <head>
-		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBwcIZCOxf1S-nCIdxafrlOovyod-EVSaI&amp;libraries=places&amp;callback=initAutocomplete" async="true" defer="true"></script>
+<script type="text/javascript">
+var placeSearch, autocomplete;
+
+function initAutocomplete() {
+    // Create the autocomplete object, restricting the search to geographical
+    // location types.
+    autocomplete = new google.maps.places.Autocomplete(
+        /** @type {!HTMLInputElement} */(document.getElementById('location')),
+        {types: ['geocode']});
+
+    // When the user selects an address from the dropdown, populate the address
+    // fields in the form.
+    autocomplete.addListener('place_changed', fillInAddress);
+  }
+
+
+// Bias the autocomplete object to the user's geographical location,
+// as supplied by the browser's 'navigator.geolocation' object.
+function geolocate() {
+  if (navigator.geolocation) {
+    navigator.geolocation.getCurrentPosition(function(position) {
+      var geolocation = {
+        lat: position.coords.latitude,
+        lng: position.coords.longitude
+      };
+      var circle = new google.maps.Circle({
+        center: geolocation,
+        radius: position.coords.accuracy
+      });
+      autocomplete.setBounds(circle.getBounds());
+    });
+  }
+}
+</script>
+		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBwcIZCOxf1S-nCIdxafrlOovyod-EVSaI&amp;libraries=places&amp;callback=initAutocomplete" async="async" defer="defer"></script>
 
 <title>Seller Account</title>
 </head>
@@ -86,39 +120,7 @@
         <script layout:fragment="script" type="text/javascript">
 		$(document).ready(function() {
 			$('#createAccount').parsley();
-		});
-	      var placeSearch, autocomplete;
-	      initAutocomplete();
-	      function initAutocomplete() {
-	          // Create the autocomplete object, restricting the search to geographical
-	          // location types.
-	          autocomplete = new google.maps.places.Autocomplete(
-	              /** @type {!HTMLInputElement} */(document.getElementById('location')),
-	              {types: ['geocode']});
-
-	          // When the user selects an address from the dropdown, populate the address
-	          // fields in the form.
-	          autocomplete.addListener('place_changed', fillInAddress);
-	        }
-
-
-	      // Bias the autocomplete object to the user's geographical location,
-	      // as supplied by the browser's 'navigator.geolocation' object.
-	      function geolocate() {
-	        if (navigator.geolocation) {
-	          navigator.geolocation.getCurrentPosition(function(position) {
-	            var geolocation = {
-	              lat: position.coords.latitude,
-	              lng: position.coords.longitude
-	            };
-	            var circle = new google.maps.Circle({
-	              center: geolocation,
-	              radius: position.coords.accuracy
-	            });
-	            autocomplete.setBounds(circle.getBounds());
-	          });
-	        }
-	      }
+		});	    
 
 	</script>
 	
