--- a/Source/OurFood/src/main/resources/templates/buyeraccount/edit-form.html
+++ b/Source/OurFood/src/main/resources/templates/buyeraccount/edit-form.html
@@ -3,6 +3,42 @@
 	xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
 	layout:decorator="layout">
 <head>
+<script type="text/javascript">
+var placeSearch, autocomplete;
+
+function initAutocomplete() {
+    // Create the autocomplete object, restricting the search to geographical
+    // location types.
+    autocomplete = new google.maps.places.Autocomplete(
+        /** @type {!HTMLInputElement} */(document.getElementById('location')),
+        {types: ['geocode']});
+
+    // When the user selects an address from the dropdown, populate the address
+    // fields in the form.
+    autocomplete.addListener('place_changed', fillInAddress);
+  }
+
+
+// Bias the autocomplete object to the user's geographical location,
+// as supplied by the browser's 'navigator.geolocation' object.
+function geolocate() {
+  if (navigator.geolocation) {
+    navigator.geolocation.getCurrentPosition(function(position) {
+      var geolocation = {
+        lat: position.coords.latitude,
+        lng: position.coords.longitude
+      };
+      var circle = new google.maps.Circle({
+        center: geolocation,
+        radius: position.coords.accuracy
+      });
+      autocomplete.setBounds(circle.getBounds());
+    });
+  }
+}
+</script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBwcIZCOxf1S-nCIdxafrlOovyod-EVSaI&amp;libraries=places&amp;callback=initAutocomplete" async="async" defer="defer"></script>
+
 <title>Buyer Account</title>
 </head>
 <body>
@@ -62,6 +98,14 @@
 									<input type="number" th:field="*{ISBN}"
 										placeholder="Pin Code" class="form-control input-sm mandatory"
 										id="ISBN" required="required" />
+								</div>
+							</div>
+							<div class="form-group">
+								<label for="location" class="control-label col-md-2">Location</label>
+								<div class="col-md-4">
+									<input onFocus="geolocate()" type="text" th:field="*{location}" placeholder="location"
+										class="form-control input-sm mandatory" id="location"
+										required="required" />
 								</div>
 							</div>
 							<div class="form-group">
