--- a/Source/OurFood/src/main/resources/templates/layout.html
+++ b/Source/OurFood/src/main/resources/templates/layout.html
@@ -134,8 +134,8 @@
 						class="arrow fa fa-angle-down"></b>
 				</a> <b class="arrow"></b>
 					<ul class="submenu">
-						<li><a href="/buyerorder/create" title="Create Order"> <i
-								class="menu-icon fa fa-caret-right"></i> Create Order
+						<li><a href="product/shop" title="Create Order"> <i
+								class="menu-icon fa fa-caret-right"></i> Place Order
 						</a> <b class="arrow"></b></li>
 						<li sec:authorize="hasRole('PERM_PLATFORM_UPDATE')"><a
 							href="/buyerorder/list" title="View Orders"> <i
