--- a/Source/OurFood/src/main/resources/static/css/static.css
+++ b/Source/OurFood/src/main/resources/static/css/static.css
@@ -111,3 +111,7 @@ body>.container {
     box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.3) !important;
     -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.3) !important;
 }
+#map {
+  height: 400px;
+  width: 100%;
+}    
